--- a/src/assets/styles/components/ShowCalculator.module.scss
+++ b/src/assets/styles/components/ShowCalculator.module.scss
@@ -64,6 +64,8 @@
     align-items: center; 
     text-align: center; 
     padding-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .calculation,
