--- a/src/assets/styles/components/ShowCalculator.module.scss
+++ b/src/assets/styles/components/ShowCalculator.module.scss
@@ -55,7 +55,7 @@
 }
 @media (max-width: 1024px) {
   .pricingCalculator {
-    width: 100%; 
+    width: 800px; 
     height: 700px;
     margin: 0 auto;
     display: flex;
