--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -71,7 +71,7 @@
   color: #000;
   font-size: 1.25rem;
   height: 50px;
-  padding: 1.5%;
+  padding: 10px;
   margin-right: 20px;
   width: 290px;
   font-family: "Montserrat";
@@ -83,6 +83,7 @@
   left: 1.25rem;
   position: absolute;
   top: -0.625rem;
+  font-family: "Montserrat";
 }
 
 .custom_select_selected {
