--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -205,6 +205,7 @@
     padding-right: 55%;
     font-size: 15px;
     margin-left: 18px;
+    padding-top: 5px;
   }
   .custom_select {
     width: 290px;
@@ -230,8 +231,9 @@
     height: 50px;
     text-align: center;
     margin-right: 30px;
-    font-size: 15px;
+    font-size: 12px;
     margin-left: 15px;
+    padding-top: 8px;
   }
   .close {
     top: 75%;
