fix: bugs in adaptive, add: search on catalog page, delete: unused components

--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -83,6 +83,13 @@
   z-index: 100;
   transform: translateX(100%);
   border-bottom-left-radius: 30px;
+  p{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    font-weight: 400;
+  }
   ul {
     gap: 15px;
     display: flex;
