--- a/src/assets/styles/components/OverNavbar.module.scss
+++ b/src/assets/styles/components/OverNavbar.module.scss
@@ -1,5 +1,3 @@
-// @import '../globalStyles.scss';
-
 .OverNavbar{
     width: 90%;
     margin: 0 auto;
@@ -11,7 +9,12 @@
     flex-direction: row-reverse ;
     font-family: "Gotham Pro";
     font-weight: bold;
-    @media screen and (max-width: 1024px) {
+    p{
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+    @media screen and (max-width: 1023px) {
         display: none;
       }
 }
