--- a/src/assets/styles/pages/Catalog/Catalog.module.scss
+++ b/src/assets/styles/pages/Catalog/Catalog.module.scss
@@ -2,9 +2,12 @@
   margin: 0 auto;
   width: 90%;
   font-family: "Montserrat";
-  @media screen and (max-width: "550px"){
+  @media screen and (max-width: "550px") {
     gap: 20px;
     justify-content: unset !important;
+  }
+  @media screen and (max-width: "768px") {
+    margin-top: 100px;
   }
   .title {
     font-family: "Inter";
@@ -20,6 +23,33 @@
 
   .catalog_block {
     margin-bottom: 80px;
+    .search {
+      width: 40%;
+      box-shadow: 1px 1px 3px 1px #777;
+      margin: 0 auto;
+      margin-top: 60px;
+      display: flex;
+      align-items: center;
+      background-color: #fff;
+      border-radius: 15px;
+      padding-inline: 10px;
+      @media screen and (max-width: "768px") {
+        width: 100%;
+      }
+      input {
+        font-size: 1.3rem;
+        width: 100%;
+        border-radius: 15px;
+        display: inline;
+        border: none;
+        padding-block: 15px;
+        padding-inline: 10px;
+        @media screen and (max-width: "768px") {
+        padding-block: 10px;
+        font-size: 1rem;
+        }
+      }
+    }
   }
 
   .adaptive_none {
@@ -30,10 +60,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 80px;
-    margin-top: 80px;
-    @media screen and (max-width: "550px"){
-      gap: 0px;
+    gap: 40px;
+    margin-top: 40px;
+    @media screen and (max-width: "550px") {
+      gap: 10px;
+      display: flex;
+      flex-direction: column;
+    }
+    @media screen and (max-width: "768px") {
+      margin-top: 20px;
     }
     .filtration {
       display: flex;
@@ -45,7 +80,9 @@
       border-radius: 0.5rem;
       background: rgb(255, 255, 255);
       padding: 0 10px 0 21px;
-
+      @media screen and (max-width: "550px") {
+        width: 100%;
+      }
       p {
         font-weight: 600;
       }
@@ -63,7 +100,9 @@
       border: 1px solid black;
       background: rgb(255, 255, 255);
       padding: 0 10px 0 21px;
-
+      @media screen and (max-width: "550px") {
+        width: 100%;
+      }
       p {
         font-weight: 600;
       }
@@ -83,7 +122,12 @@
   .types_car {
     display: flex;
     align-items: center;
-    gap: 29px;
+    gap: 19px;
+    @media screen and (max-width: "550px") {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   .country_car {
@@ -91,7 +135,7 @@
     justify-content: center;
     align-items: center;
 
-    width: 15.1vw;
+    width: 13.1vw;
     height: 45px;
     border-radius: 12px;
     background: rgb(255, 255, 255);
@@ -100,7 +144,7 @@
     font-family: "Inter";
     font-weight: 600;
     @media screen and (max-width: "550px") {
-      width: 18vw !important;
+      width: 25vw !important;
     }
   }
 
@@ -137,11 +181,11 @@
   .filter_modal {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     border: 1px solid rgb(0, 0, 0);
     border-radius: 16px;
     background: rgb(196, 196, 196);
-    margin-top: 80px;
+    margin-top: 40px;
     padding: 100px;
 
     .row {
@@ -212,16 +256,16 @@
     color: #fff;
     background: rgb(45, 150, 149);
   }
-  .row_catalog{
+  .row_catalog {
     display: flex;
     width: 100%;
     gap: 1.1vw;
-    margin-top: 50px;
+    margin-top: 20px;
     flex-wrap: wrap;
-    .col_4_catalog{
+    .col_4_catalog {
       width: 32.5%;
       display: flex;
-      margin-bottom:1vh;
+      margin-bottom: 1vh;
       @media screen and (max-width: "1380px") {
         width: 49%;
       }
@@ -365,15 +409,15 @@
     }
 
     .title {
-      font-size: 20px;
+      font-size: 28px;
       font-weight: 600;
       margin-top: 0;
     }
 
     .main_title {
-      display: flex;
+      display: grid;
       align-items: center;
-      gap: 50px;
+      gap: 20px;
     }
 
     .back {
@@ -409,5 +453,4 @@
       }
     }
   }
-  
 }
