--- a/src/assets/styles/pages/Home/GreetingBlock.module.scss
+++ b/src/assets/styles/pages/Home/GreetingBlock.module.scss
@@ -9,6 +9,9 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding-block: 80px;
+  @media screen and (max-width: 1024px){
+    padding-block: 40px;
+  }
 }
 
 .col_6 {
@@ -52,6 +55,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .row{
+    padding-block: 40px;
+  }
+
   .col_6 {
     width: 100%;
     margin-top: 70px;
@@ -62,6 +69,7 @@
     margin-top: 20px;
     font-size: 4vw;
     padding: 0.4em;
+    border-radius: 8px;
   }
 
   .title,.text {
