add: anim on about us

--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -4,10 +4,42 @@
   width: 90vw;
 
   .about_hero {
-    margin: 140px 0 70px;
+    margin: 100px auto 50px auto;
+    padding-top: 110px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+
+    h1 {
+      animation: scroll 5s linear infinite;
+      white-space: nowrap;
+      position: absolute;
+      z-index: -1;
+      top: 0px;
+      color: #19746b;
+      text-align: center;
+      font-weight: 400;
+      font-size: 160px;
+      letter-spacing: 75px;
+      font-family: "Gotham Pro";
+    }
+    @keyframes scroll {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+
     img {
-      width: 100%;
+      position: relative;
+      width: 80%;
     }
   }
 
