--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -5,7 +5,7 @@
   background-image: url(../../../img/FirstBlock.png);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 86.2vh;
 }
 
 .title {
@@ -53,8 +53,7 @@
   transition: all 0.2s;
   will-change: contents;
   &:hover {
-    background-color: transparent;
-    color: #19746b;
+    transform: scaleX(1.01);
     transition: all 0.2s;
   }
 }
@@ -70,10 +69,28 @@
   .container {
     height: fit-content;
     display: flex;
+    position: relative;
     justify-content: center;
     background: none;
     padding-block: unset;
-    margin-top: 100px;
+    margin-top: 50px;
+    overflow-x: hidden;
+
+    &::before {
+      margin: -20px;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-size: cover;
+      background-clip: border-box;
+      background-position: center;
+      z-index: -1;
+      filter: blur(5px);
+      background-image: url(../../../img/FirstBlock.png);
+    }
     .ImageCar {
       display: none;
     }
@@ -82,7 +99,7 @@
   .block {
     display: flex;
     justify-content: center;
-    margin-top: 101px;
+    margin: 120px 0;
   }
 
   .title {
@@ -91,12 +108,10 @@
     font-size: 40px;
     font-weight: 400;
     text-align: center;
-    color: black;
-
     span {
       &:first-child {
         font-size: 40px;
-        color: rgb(25, 116, 107);
+        color: rgb(19, 209, 190);
         padding-right: 0.5rem;
       }
       display: inline;
@@ -112,9 +127,8 @@
 
   .button {
     margin-top: 57px;
-    margin-bottom: 249px;
     font-weight: 200;
-    border-radius: 1.82px;
+    border-radius: 10px;
   }
 }
 
@@ -125,10 +139,7 @@
     span {
       &:first-child {
         font-size: 6.4vw;
-        color: rgb(25, 116, 107);
-        padding-right: 0.5rem;
       }
-      display: inline;
     }
   }
 }
